--- a/index.html
+++ b/index.html
@@ -3,69 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buwanyi Secondary School</title>
-   <link rel="stylesheet" href="styles.css">
+    <title>Pet King</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <nav>
-            <div class="logo">
-                <h1>Buwanyi Secondary School</h1>
-            </div>
-            <ul class="nav-links">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#academics">Academics</a></li>
-                <li><a href="#admissions">Admissions</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
+        <h1>Welcome to Pet King</h1>
     </header>
 
-    <section id="home">
-            <h2>Welcome to Buwanyi Secondary School</h2>
-            <p>Excellence in Education</p>
+    <nav>
+        <ul>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#pets">Our Pets</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+        </ul>
+    </nav>
+
+    <section id="services">
+        <h2>Our Services</h2>
+        <ol>
+            <li>Pet Grooming</li>
+            <li>Pet Boarding</li>
+            <li>Veterinary Services</li>
+            <li>Pet Training</li>
+            <li>Pet Adoption</li>
+        </ol>
+    </section>
+
+    <section id="pets">
+        <h2>Meet Our Pets</h2>
+        <div class="pet">
+            <img src="german-shepherd.jpg" alt="Dog">
+            <p>Friendly and loyal dogs.</p>
+        </div>
+        <div class="pet">
+            <img src="cat.jpg" alt="Cat">
+            <p>Curious and independent cats.</p>
+        </div>
+        <div class="pet">
+            <img src="chick.jpg" alt="Bird">
+            <p>Colorful and talkative birds.</p>
         </div>
     </section>
 
-    <section id="about">
-        <h2>About Us</h2>
-        <p>Information about the school's history, mission, and values.</p>
-    </section>
-
-    <section id="academics">
-        <h2>Academics</h2>
-        <p>Details about the academic programs and curriculum.</p>
-    </section>
-
-    <section id="admissions">
-        <h2>Admissions</h2>
-        <p>Information on how to apply, requirements, and deadlines.</p>
-        <p>find us @ Nantabulirwa parish Mukono district</p>
-    </section>
-
-    <section id="contact">
-        <h2>Contact Us</h2>
-        <form id="contact-form">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" required></textarea>
-            <button type="submit">Send</button>
-        </form>
-    </section>
-
     <footer>
-        <p>&copy; 2024 Buwanyi Secondary School. All rights reserved.</p>
+        <p>&copy; 2024 Pet King. All rights reserved.</p>
     </footer>
-
-    <script>
-        document.getElementById('contact-form').addEventListener('submit', function(event) {
-    event.preventDefault();
-    alert('Thank you for your message!');
-});
-    </script>
 </body>
 </html>
